[tool.poetry]
name = "exchange-service"
version = "0.1.0"
description = ""
authors = ["Jay Tsai <a72140959@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
